--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -34,5 +34,8 @@
   "deleteProblem": "Delete Problem",
   "addProblem": "Add Problem",
   "inputPlaceholder": "Enter {{field}}",
-  "problemPlaceholder": "Problem {{number}}"
+  "problemPlaceholder": "Problem {{number}}",
+  "expand": "Expand",
+  "collapse": "Collapse",
+  "dragToReorder": "Drag to reorder"
 }
