refactor: UI/UX improvements with daisyUI migration (#9)
* refactor: migrate from Ant Design to daisyUI + Tailwind CSS

- Remove Ant Design dependencies, add daisyUI v5 and Tailwind CSS v4
- Add postcss.config.js and tailwind.config.js configuration
- Rewrite ConfigPanel, Preview, and ContestEditor components with new UI
- Implement fullscreen preview mode with zoom controls
- Add collapsible problem cards with drag-and-drop reordering
- Improve form styling: labels, inputs, focus states
- Optimize list view: hover states, muted delete buttons, drag handles
- Add dashed "Add Problem" button with hover effects
- Update i18n translations for new UI elements
- Bundle size reduced by ~50% (1272KB -> 633KB)

* fix: resolve multiple issues from Ant Design to DaisyUI migration

- Add ToastProvider to replace imperative DOM manipulation
- Add drag-and-drop file upload support for images
- Add resizable split panel using allotment
- Add Typst initialization loading indicator
- Add smart expand/collapse for new problems
- Add loading overlay to preview to prevent flickering

* feat: 添加页面跳转功能

- 添加 PreviewHandle 支持页面跳转
- 添加页码显示和跳转输入框
- 实现滚动时页码自动更新
- 添加页面跳转相关 CSS 样式和翻译

* refactor: apply minimal whitespace design to contest editor

Improve problem editor UI with refined minimal aesthetics:
- Add subtle borders, refined shadows, and smooth transitions
- Display sample input/output in side-by-side grid layout
- Implement hover-to-show pattern for delete buttons
- Increase editor font size from 12px to 13px for better readability
- Add mobile responsive design for sample fields
- Update form labels with consistent styling and spacing

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -11,5 +11,10 @@
   "clearCache": "Clear Cache",
   "refresh": "Refresh",
   "add": "Add",
-  "delete": "Delete"
+  "delete": "Delete",
+  "fullscreen": "Fullscreen",
+  "exitFullscreen": "Exit Fullscreen",
+  "page": "Page",
+  "go": "Go",
+  "goToPage": "Go to page"
 }
