--- a/src/i18n/locales/zh/common.json
+++ b/src/i18n/locales/zh/common.json
@@ -11,5 +11,10 @@
   "clearCache": "清空缓存",
   "refresh": "刷新",
   "add": "添加",
-  "delete": "删除"
+  "delete": "删除",
+  "fullscreen": "全屏",
+  "exitFullscreen": "退出全屏",
+  "page": "页",
+  "go": "跳转",
+  "goToPage": "跳转到页码"
 }
